# olivaw

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
deploy/: com.beason.olivaw.plist
examples/: core_signal_stub.json  daily_context.json  project_state_stub.json
olivaw/: actions.py  app.py  executor.py  models.py  policy.py
reports/: wave10e-local-model-optimization.md
scripts/: install_launch_agent.sh  restart_launch_agent.sh  status_launch_agent.sh  uninstall_launch_agent.sh
src/olivaw/: __init__.py  bootstrap.py  cli.py  config.py  health.py  models.py  web.py
src/olivaw/actions/: __init__.py  builtin.py  execution.py  intent.py  models.py  registry.py
src/olivaw/assistant/: __init__.py  attribution.py  capabilities.py  capability_registry.py  core.py  identity.py  prompts.py
src/olivaw/briefing/: __init__.py  composer.py  health_review.py  renderer.py  schemas.py  source_briefing.py
src/olivaw/capabilities/: __init__.py  briefing.py  chat.py  health.py  sources.py
src/olivaw/providers/: __init__.py  base.py  ollama.py  openai.py  router.py
src/olivaw/services/: __init__.py  scheduler.py
src/olivaw/sources/: __init__.py  aggregation.py  base.py  (+6 more)
tests/: test_actions.py  test_attribution.py  test_benchmark.py  test_briefing.py  test_chat.py  test_cli.py  test_config.py  test_core_signal_source.py  test_health.py  test_health_review.py  test_identity.py  test_launchd.py  test_ollama_provider.py  test_openai_provider.py  test_prime_observer_source.py  test_prompts.py  test_router.py  test_sources.py  test_web.py
(+13 files in other folders)
